<resources>
    <string name="app_name">ClubDistances</string>
    <string name="modify_clubs">Modify Clubs</string>
    <string name="error_message">error message</string>
    <string name="distance">Yardage</string>
    <string name="add">add</string>
    <string name="brand">Name</string>
    <string name="loft">Degrees</string>
    <string name="clubbrand">ClubBrand</string>
    <string name="yardageTitle">Yardage:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>