<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homeScreen.HomeScreenFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/modifyButtonLayout"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="ExtraText">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/modifyClubsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:minHeight="80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <AutoCompleteTextView
                android:id="@+id/selectClubDropDown"
                android:layout_width="60dp"
                android:layout_height="45dp"
                android:layout_margin="10dp"
                android:hint="Club"
                android:editable="false"
                android:cursorVisible="false"
                android:clickable="false"

                android:textAlignment="center"
                android:maxLength="2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </AutoCompleteTextView>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ClubLoftInput"
                android:layout_width="60dp"
                android:layout_height="45dp"
                android:hint="@string/loft"
                android:inputType="number"
                android:maxLength="4"
                android:textAlignment="center"
                android:layout_margin="10dp"
                app:layout_constraintStart_toEndOf="@+id/selectClubDropDown"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ClubBrandInput"
                android:layout_width="60dp"
                android:layout_height="45dp"
                android:hint="@string/brand"
                android:maxLength="35"
                android:textAlignment="center"
                android:layout_alignParentRight="true"
                android:layout_margin="10dp"
                app:layout_constraintStart_toEndOf="@+id/ClubLoftInput"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ClubYardageInput"
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:inputType="number"
                android:hint="@string/yardage"
                android:maxLength="3"
                android:textAlignment="center"
                android:layout_margin="10dp"
                app:layout_constraintStart_toEndOf="@+id/ClubBrandInput"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/addClubButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:layout_margin="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ClubYardageInput"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/addClubErrorMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/error_message"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/selectClubDropDown" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/modifyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modify_clubs"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modifyClubsLayout"
            app:layout_constraintBottom_toTopOf="@+id/ClubsScrollView"/>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/ClubsScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:minHeight="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modifyButton">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>